# Angelic

./: .gitignore  README.md  main.py  pyproject.toml
docs/: UI-HANDOFF.md
docs/indexes/: data.json  image.json  summary.json
docs/ui-extract/: FULL-STATIC-UNPACK-LOG.md  UI-CN-JP-STATIC-UNPACK-LOG.md
docs/ui-extract/pixel-reverse/: PIXEL-REVERSE.md  _ui_all_manifest.json  screen-atlas.json  view_state_audit.json
docs/ui-extract/ui-cn-jp-static/: data.alst  (+1 more)
tools/: _analyze_title_pack.py  _analyze_title_vs_orig.py  _audit_settings_selfcheck.py  _audit_title_orig.py  _audit_ui_gap.py  _audit_view_state_ui.py  _bake_title_bg_with_logo.py  _capture_client_bitblt.py  _capture_manual_session.py  _capture_orig_view.py  _capture_printwindow.py  _capture_settings_imagegrab.py  _capture_settings_pages.py  _classify_title_btns.py  _complete_title_mtn_extras.py  _compose_title_fm.py  _compose_title_fm_fast.py  _drive_title_client.py  _drive_to_title_menu.py  _dump_mtn_full.py  _dump_title_geo.py  _dump_title_orig_slices.py  _fast_atlas_split.py  _find_thumbs.py  _fix_title_from_mtn.py  _fix_title_map.py  _live_capture_menus.py  _map_mtn_slots.py  _match_settings_slices.py  _match_settings_slices_cv.py  _measure_title_capture.py  _open_title_menu.py  _postmsg_capture_screens.py  _probe_option_layout.py  _probe_pbd_geo_real.py  _probe_title_mtn.py  _probe_title_mtn_full.py  _probe_ui_state.py  _relaunch_to_title.py  _run_cxdec_all_x86.py  (+29 more)
ui-preview/: ASSET-MANIFEST.json  app.js  data.js  index.html  style.css  启动预览.bat
ui-preview/_mtn/: title_bg.json  title_bg.resx.json
(+597 files in other folders)
