[project]
name = "angelic-extract"
version = "0.1.0"
description = "天使☆嚣嚣 RE-BOOT CN/JP UI static unpack tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tamagoarc>=1.1.0",
    "pillow>=10.0.0",
    "construct>=2.10.0",
    "pefile>=2024.8.26",
]

[tool.uv]
package = false
